Fixed bugs in left side search panel to show it behind the footer when scrolling to the end of page.

--- a/src/FrontendBundle/Resources/public/css/frontend.css
+++ b/src/FrontendBundle/Resources/public/css/frontend.css
@@ -2190,3 +2190,8 @@ div.ol-attribution li > strong {
 .business-info ul > li:not(:first-of-type) {
     margin-top: 10px;
 }
+
+#contact {
+    position: relative;
+    z-index: 150;
+}
